--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 	},
 	"homepage": "https://github.com/medinaobralija/test-ellipsis#readme",
 	"dependencies": {
+		"body-parser": "^1.20.2",
 		"express": "^4.19.2"
 	}
 }
